--- a/src/config.json
+++ b/src/config.json
@@ -1,5 +1,6 @@
 {
   "repository": "https://github.com/scorixear/kellerus",
   "botPrefix": "/",
-  "version": "1.0.0"
+  "version": "1.0.0",
+  "adminRoles": ["unsuspicious Role", "💻Entwickler💻", "👑Monarch👑"]
 }
