--- a/.env.sample
+++ b/.env.sample
@@ -2,7 +2,7 @@ DB_HOST="127.0.0.1"
 DB_USER=user
 DB_PASSWORD=password
 DB_PORT=3306
-DB_DATABASE=database
+DB_DATABASE=imise_bot
 
 CLIENTID=your_id
 DISCORD_TOKEN=your_token
