--- a/package.json
+++ b/package.json
@@ -23,21 +23,20 @@
   },
   "homepage": "https://github.com/scorixear/imise_bot#readme",
   "dependencies": {
-    "@discordjs/builders": "^0.8.2",
-    "@discordjs/rest": "^0.1.0-canary.0",
-    "discord-api-types": "^0.24.0",
-    "discord.js": "^13.1.0",
-    "dotenv": "^10.0.0",
-    "mariadb": "^2.5.4"
+    "@discordjs/builders": "^0.15.0",
+    "@discordjs/rest": "^0.5.0",
+    "discord-api-types": "^0.34.0",
+    "discord.js": "^13.8.0",
+    "dotenv": "^16.0.1",
+    "mariadb": "^3.0.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.13",
-    "@types/dotenv": "^8.2.0",
-    "@types/node-fetch": "^2.5.10",
+    "@types/node-fetch": "^2.6.1",
+    "nodemon": "^2.0.16",
     "npm-run-all": "^4.1.5",
     "rimraf": "^3.0.2",
-    "ts-node": "^10.4.0",
+    "ts-node": "^10.5.0",
     "tslint": "^6.1.3",
-    "typescript": "^4.4.4"
+    "typescript": "^4.5.5"
   }
 }
