--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "dist/index.js",
   "scripts": {
     "clean": "rimraf dist/*",
-    "lint": "tslint -c tslint.json -p tsconfig.json --fix",
+    "lint": "eslint ./src --ext .ts --fix",
     "tsc": "tsc",
     "build": "npm-run-all clean lint tsc",
     "dev:start": "npm-run-all build start",
@@ -26,16 +26,21 @@
     "@discordjs/rest": "^1.0.0",
     "discord-api-types": "^0.36.3",
     "discord.js": "^14.0.3",
+    "discord.ts-architecture": "^1.0.10",
     "dotenv": "^16.0.1",
     "mariadb": "^3.0.0"
   },
   "devDependencies": {
     "@types/node-fetch": "^2.6.1",
+    "@typescript-eslint/eslint-plugin": "^5.31.0",
+    "@typescript-eslint/parser": "^5.31.0",
+    "eslint": "^8.20.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.2.1",
     "nodemon": "^2.0.16",
     "npm-run-all": "^4.1.5",
+    "prettier": "^2.7.1",
     "rimraf": "^3.0.2",
-    "ts-node": "^10.5.0",
-    "tslint": "^6.1.3",
     "typescript": "^4.5.5"
   }
 }
